--- a/farmacia.html
+++ b/farmacia.html
@@ -15,10 +15,9 @@
 </head>
 <body>
   <header id="header-title">
-    <img id="header-logo" src="./img/logo1.jpg" alt="...">
+    <img id="header-logo" src="./images/logo1.jpg" alt="logo">
     <h1 style="margin: 0;" id="headerH1" class="text-center">Farmacia</h1>
 </header>
-<hr id="hr-header">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid ms-2">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,9 +42,38 @@
       </div>
     </div>
   </nav>
+  <main>
+    <div class="container" id="contenedor-farmacia">
 
+    </div>
+  </main>
+  <footer>
+    <div class="container-fluid d-flex">
+      <div class="row">
+        <div class="h3-container ps-4">
+          <h3>Seguinos en nuestras redes sociales!</h3>
+        </div>
+        <div class="col-sm-2">
+          <a target="_blank" href="https://facebook.com"><img class="icon-f" src="./images/facebook.png" alt="facebook"></a>
+        </div>
+        <div class="col-sm-2">
+          <a target="_blank" href="https://instagram.com"><img class="icon" src="./images/instagram.png" alt="instagram"></a>
+        </div>
+        <div class="col-sm-2 py-2">
+          <a target="_blank" href="https://twitter.com"><img class="icon" src="./images/twitter.png" alt="twitter"></a>
+        </div>
+        <div class="col-sm-3 ps-3 mb-3">
+          <h3>Franco's Pet-Shop</h3>
+          <h4>Rio de Janeiro 300</h4>
+        </div>
+        <div class="col-sm-3 mb-3">
+          <h4>Horarios: <br> Lun a Vie 08:00hs a 22:00hs</h4>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-
+      <script src="./js/main.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
