--- a/contacto.html
+++ b/contacto.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="particles-js"></div>
   <header id="header-title">
-    <img id="header-logo" src="./img/logo1.jpg" alt="...">
+    <img id="header-logo" src="./images/logo1.jpg" alt="...">
     <h1 style="margin: 0;" id="headerH1" class="text-center">Contacto</h1>
 </header>
-<hr id="hr-header">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid ms-2">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,8 +44,77 @@
       </div>
     </div>
   </nav>
-
-
+  <main>
+    <!--position relative  z-index 99-->
+    
+    <h3 style="padding-left: 30px; padding-top: 30px; padding-bottom: 30px;">
+      Ante cualquier duda puede contactarnos:
+    </h3>
+    <div class="container-fluid formulario d-flex col-sm-6">
+      <div class="row">
+        <form action="" method="GET">
+          <div class="row">
+            <div class="col-sm-6">
+              <label for="nombre">Nombre:</label><br>
+              <input type="text" placeholder="Nombre" id="nombre" class="input" required><br><br>
+            </div>
+            <div class="col-sm-6">
+              <label for="apellido">Apellido:</label><br>
+              <input type="text" placeholder="Apellido" id="apellido" class="input"><br><br>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <label for="email">Email:</label><br>
+              <input type="email" placeholder="email@example.com" required class="input"><br><br>
+            </div>
+            <div class="col-sm-6">
+              <label for="telefono">Telefono:</label><br>
+              <input type="number" placeholder="Telefono" class="input"><br><br>
+            </div>
+          </div>
+          <label for="selector">Mascota:</label>
+          <select name="selector" id="mascotas">
+            <option value="0">----------</option>
+            <option value="1">Gato</option>
+            <option value="2">Perro</option>
+          </select class="caja"><br><br>
+          <label for="msj">Tu Mensaje:</label><br>
+          <textarea name="msg" id="msg" cols="60" rows="4" required></textarea><br>
+          <div class="btn-container">
+            <button class="button-contact">enviar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div class="container-fluid d-flex">
+      <div class="row">
+        <div class="h3-container ps-4">
+          <h3>Seguinos en nuestras redes sociales!</h3>
+        </div>
+        <div class="col-sm-2">
+          <a target="_blank" href="https://facebook.com"><img class="icon-f" src="./images/facebook.png" alt="facebook"></a>
+        </div>
+        <div class="col-sm-2">
+          <a target="_blank" href="https://instagram.com"><img class="icon" src="./images/instagram.png" alt="instagram"></a>
+        </div>
+        <div class="col-sm-2 py-2">
+          <a target="_blank" href="https://twitter.com"><img class="icon" src="./images/twitter.png" alt="twitter"></a>
+        </div>
+        <div class="col-sm-3 ps-3 mb-3">
+          <h3>Franco's Pet-Shop</h3>
+          <h4>Rio de Janeiro 300</h4>
+        </div>
+        <div class="col-sm-3 mb-3">
+          <h4>Horarios: <br> Lun a Vie 08:00hs a 22:00hs</h4>
+        </div>
+      </div>
+    </div>
+  </footer>
+      <script src="./js/particles.min.js"></script>
+      <script src="./js/particulas.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
