--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/sweetalert2.min.css">
 </head>
 <body>
   <div id="particles-js"></div>
@@ -52,11 +53,11 @@
     </h3>
     <div class="container-fluid formulario d-flex col-sm-6">
       <div class="row">
-        <form action="" method="GET">
-          <div class="row">
+        <form action="" id="formulario-contacto" method="GET">
+          <div id="form-contact" class="row">
             <div class="col-sm-6">
               <label for="nombre">Nombre:</label><br>
-              <input type="text" placeholder="Nombre" id="nombre" class="input" required><br><br>
+              <input type="text" placeholder="Nombre" id="nombre" class="input"><br><br>
             </div>
             <div class="col-sm-6">
               <label for="apellido">Apellido:</label><br>
@@ -66,7 +67,7 @@
           <div class="row">
             <div class="col-sm-6">
               <label for="email">Email:</label><br>
-              <input type="email" placeholder="email@example.com" required class="input"><br><br>
+              <input type="email" placeholder="email@example.com" id="mail" class="input"><br><br>
             </div>
             <div class="col-sm-6">
               <label for="telefono">Telefono:</label><br>
@@ -80,9 +81,9 @@
             <option value="2">Perro</option>
           </select class="caja"><br><br>
           <label for="msj">Tu Mensaje:</label><br>
-          <textarea name="msg" id="msg" cols="60" rows="4" required></textarea><br>
-          <div class="btn-container">
-            <button class="button-contact">enviar</button>
+          <textarea name="msg" id="msg" cols="60" rows="4"></textarea><br>
+          <div id="button" class="btn-container">
+            <input type="submit" value="Enviar">
           </div>
         </form>
       </div>
@@ -113,6 +114,8 @@
       </div>
     </div>
   </footer>
+      <script src="./js/sweetAlert.js"></script>
+      <script src="./js/sweetalert2.all.min.js"></script>
       <script src="./js/particles.min.js"></script>
       <script src="./js/particulas.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
