--- a/farmacia.html
+++ b/farmacia.html
@@ -5,15 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmacia Pet-Shop Franco</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/lightbox.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="hidden">
+  <div id="particles-js"></div>
+  <div class="center-load" id="onload">
+    <div class="lds-roller">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </div>
+
   <header id="header-title">
     <img id="header-logo" src="./images/logo1.jpg" alt="logo">
     <h1 style="margin: 0;" id="headerH1" class="text-center">Farmacia</h1>
@@ -43,8 +58,14 @@
     </div>
   </nav>
   <main>
-    <div class="container" id="contenedor-farmacia">
+    <div class="row container-fluid d-flex">
+      <div class="filtros col-sm-1 flex-column">
+      </div>
+      <div class="col-sm-10">
+        <div id="contenedor-farmacia" class="container-fluid my-3">
 
+        </div>
+      </div>
     </div>
   </main>
   <footer>
@@ -73,6 +94,13 @@
     </div>
   </footer>
 
+      <script src="./js/sweetAlert.js"></script>
+      <script src="./js/preloader.js"></script>
+      <script src="./js/particles.min.js"></script>
+      <script src="./js/particulas.js"></script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
+      <script src="./js/lightbox-plus-jquery.min.js"></script>
+      <script src="./js/lightbox.min.js"></script>
       <script src="./js/main.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
